bin/test/__snapshots__/e2e.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end-to-end integration prints error and help message when no arguments given 1`] = `
"internal/modules/cjs/loader.js:905
  throw err;
  ^

Error: Cannot find module '/Users/tuanthanh2067/Desktop/Study/osd600/cv-ssg.js'
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:902:15)
    at Function.Module._load (internal/modules/cjs/loader.js:746:27)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}"
`;

exports[`end-to-end integration prints help message when --help given 1`] = `
"internal/modules/cjs/loader.js:905
  throw err;
  ^

Error: Cannot find module '/Users/tuanthanh2067/Desktop/Study/osd600/cv-ssg.js'
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:902:15)
    at Function.Module._load (internal/modules/cjs/loader.js:746:27)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}"
`;
